[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/img/teatro_colon.png" type="Texture" id=1]
[ext_resource path="res://assets/img/teatro_colon_byn.png" type="Texture" id=2]
[ext_resource path="res://scripts/Mapa.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/img/mapa.png" type="Texture" id=5]
[ext_resource path="res://assets/img/teatro_rex.png" type="Texture" id=6]
[ext_resource path="res://assets/img/teatro_rex_byn.png" type="Texture" id=7]
[ext_resource path="res://assets/img/teatro_regina.png" type="Texture" id=8]
[ext_resource path="res://assets/img/teatro_regina_byn.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/numerosfont.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/img/flecha-des.png" type="Texture" id=11]
[ext_resource path="res://assets/img/boton_bandoneon.png" type="Texture" id=12]
[ext_resource path="res://assets/img/fondo_tutorial.png" type="Texture" id=13]

[node name="Node2D_Mapa" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1073.0
margin_bottom = 836.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonTeatro1" type="TextureButton" parent="."]
margin_left = 103.153
margin_top = 102.42
margin_right = 328.153
margin_bottom = 254.42
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonTeatro2" type="TextureButton" parent="."]
margin_left = 421.786
margin_top = 339.152
margin_right = 612.786
margin_bottom = 546.153
disabled = true
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonTeatro3" type="TextureButton" parent="."]
margin_left = 752.781
margin_top = 43.933
margin_right = 977.781
margin_bottom = 270.933
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonTutorial" type="TextureButton" parent="."]
margin_left = 941.062
margin_top = 9.34389
margin_right = 1008.06
margin_bottom = 76.3439
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonVolver" type="TextureButton" parent="."]
margin_left = 973.592
margin_top = 598.714
margin_right = 1038.59
margin_bottom = 663.714
rect_rotation = 180.0
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points_t1" type="Label" parent="."]
margin_left = 234.475
margin_top = 246.284
margin_right = 313.475
margin_bottom = 275.284
custom_fonts/font = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelPuntos2" type="Label" parent="."]
margin_left = 534.814
margin_top = 557.003
margin_right = 582.814
margin_bottom = 571.003
text = "Puntos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points_t2" type="Label" parent="."]
margin_left = 592.165
margin_top = 550.557
margin_right = 691.165
margin_bottom = 578.557
custom_fonts/font = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points_t3" type="Label" parent="."]
margin_left = 853.719
margin_top = 260.604
margin_right = 948.719
margin_bottom = 290.604
custom_fonts/font = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FondoTutorial" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.854902 )
margin_left = 264.52
margin_top = 11.7798
margin_right = 857.52
margin_bottom = 215.78
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelTutorial" type="Label" parent="."]
margin_left = 283.014
margin_top = 41.3654
margin_right = 849.014
margin_bottom = 174.365
text = "Recorre cada teatro para tocar piezas de Astor Piazzolla.
En cada uno de ellos, te encontrarás con 3 músicos con quienes podrás tocar.
Llega al teatro Colón, gana los 3 encuentros musicales, y ganarás el juego!

El teatro Regina se desbloquea al alcanzar los 1000 puntos en el teatro Gran Rex.
El teatro Colón se desbloquea al alcanzar los 1500 puntos en el teatro Regina.

Los puntos se calculan en base a las máximas puntuaciones obtenidas con cada músico."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SonidoClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -24.0

[connection signal="pressed" from="botonTeatro1" to="." method="_on_botonTeatro1_pressed"]
[connection signal="pressed" from="botonTeatro2" to="." method="_on_botonTeatro2_pressed"]
[connection signal="pressed" from="botonTeatro3" to="." method="_on_botonTeatro3_pressed"]
[connection signal="pressed" from="botonTutorial" to="." method="_on_botonTutorial_pressed"]
[connection signal="pressed" from="botonVolver" to="." method="_on_botonVolver_pressed"]
